force-app/main/default/objects/Loan__c/fields/Billing_Person__c.field-meta.xml
<CustomField>
    <fullName>Billing_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans (Billing Person)</relationshipLabel>
    <relationshipName>Persons_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>