force-app/main/default/objects/Loan__c/fields/depricated_Balance__c.field-meta.xml
<CustomField>
    <fullName>depricated_Balance__c</fullName>
    <label>(depricated) Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>