force-app/main/default/objects/Loan__c/fields/Transactions_Summary__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Summary__c</fullName>
    <label>Transactions Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>