force-app/main/default/objects/Loan__c/listViews/Open_Loans.listView-meta.xml
<ListView>
    <fullName>Open_Loans</fullName>
    <columns>NAME</columns>
    <columns>Person__c</columns>
    <columns>Description__c</columns>
    <columns>Total__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Loans</label>
</ListView>